Change src route

--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,10 @@
     <title>Weather ☂️</title>
 </head>
 <body>
+    <img src="../src/eberhard-grossgasteiger-P9J7aBf5vTk-unsplash.jpg" alt="">
     <div class="current-city"></div>
-    <button id="toggle-temp"></button>
+    <button id="toggle-temp-btn">Toggle</button>
     <div class="weather-image">
-        <img src="" alt="">
     </div>
     <input type="text">
     <button id="search">Search</button>
