Work on the spine of the page

--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../src/style.css">
     <title>Weather ☂️</title>
-</head>
+<script defer src="main.js"></script></head>
 <body>
-    <img src="../src/eberhard-grossgasteiger-P9J7aBf5vTk-unsplash.jpg" alt="">
-    <div class="current-city"></div>
-    <button id="toggle-temp-btn">Toggle</button>
-    <div class="weather-image">
+    <img src="../src/phil-botha-a0TJ3hy-UD8-unsplash.jpg" alt="">
+    <div class="weather">
+        <div class="main">
+            <div class="today-data">
+                <div class="today-temperature"></div>
+                <div class="today-city"></div>
+            </div>
+            <div class="today-image"></div>
+        </div>
+        <div class="search">
+            <p>Search</p>
+            <input type="text">
+            <div class="toggle-temp"></div>
+        </div>
+        <div class="forecast">
+            <div class="forecast-day forecast__1">
+                <div class="forecast-image"></div>
+                <div class="forecast-temperature"></div>
+                <div class="forecast-date"></div>
+            </div>
+            <div class="forecast-day forecast__2">
+                <div class="forecast-image"></div>
+                <div class="forecast-temperature"></div>
+                <div class="forecast-date"></div>
+            </div>
+            <div class="forecast-day forecast__3">
+                <div class="forecast-image"></div>
+                <div class="forecast-temperature"></div>
+                <div class="forecast-date"></div>
+            </div>
+            <div class="forecast-day forecast__4">
+                <div class="forecast-image"></div>
+                <div class="forecast-temperature"></div>
+                <div class="forecast-date"></div>
+            </div>
+            <div class="forecast-day forecast__5">
+                <div class="forecast-image"></div>
+                <div class="forecast-temperature"></div>
+                <div class="forecast-date"></div>
+            </div>
+            <div class="forecast-day forecast__6">
+                <div class="forecast-image"></div>
+                <div class="forecast-temperature"></div>
+                <div class="forecast-date"></div>
+            </div>
+            <div class="forecast-day forecast__7">
+                <div class="forecast-image"></div>
+                <div class="forecast-temperature"></div>
+                <div class="forecast-date"></div>
+            </div>
+        </div>
     </div>
-    <input type="text">
-    <button id="search">Search</button>
 </body>
 </html>
