Change the appearance and future functionality

--- a/src/index.html
+++ b/src/index.html
@@ -10,16 +10,19 @@
 <body>
     <img src="../src/phil-botha-a0TJ3hy-UD8-unsplash.jpg" alt="">
     <div class="weather">
-        <div class="main">
-            <div class="today-data">
-                <div class="today-temperature"></div>
-                <div class="today-city"></div>
-            </div>
-            <div class="today-image"></div>
+        <div class="today">
+            <div class="today__temperature"></div>
+            <div class="today__image"></div>
+            <div class="today__city"></div>
+        </div>
+        <div class="additional">
+            <div class="additional__feels-like"></div>
+            <div class="additional__humidity"></div>
+            <div class="additional__wind-speed"></div>
         </div>
         <div class="search">
             <p>Search</p>
-            <input type="text">
+            <input type="text" class="search__input">
             <div class="toggle-temp"></div>
         </div>
         <div class="forecast">
