Remove two .js files

--- a/src/index.html
+++ b/src/index.html
@@ -6,17 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../src/style.css">
     <title>Weather ☂️</title>
-<script defer src="main.js"></script></head>
 <body>
     <img src="../src/phil-botha-a0TJ3hy-UD8-unsplash.jpg" alt="">
     <div class="weather">
         <div class="today">
-            <div class="today__temperature"></div>
+            <div class="today__temperature temperature"></div>
             <div class="today__image"></div>
             <div class="today__city"></div>
         </div>
         <div class="additional">
-            <div class="additional__feels-like"></div>
+            <div class="additional__its-now"></div>
             <div class="additional__humidity"></div>
             <div class="additional__wind-speed"></div>
         </div>
@@ -26,39 +25,39 @@
             <div class="toggle-temp"></div>
         </div>
         <div class="forecast">
-            <div class="forecast-day forecast__1">
+            <div class="forecast__card">
                 <div class="forecast-image"></div>
-                <div class="forecast-temperature"></div>
+                <div class="forecast-temperature temperature"></div>
                 <div class="forecast-date"></div>
             </div>
-            <div class="forecast-day forecast__2">
+            <div class="forecast__card">
                 <div class="forecast-image"></div>
-                <div class="forecast-temperature"></div>
+                <div class="forecast-temperature temperature"></div>
                 <div class="forecast-date"></div>
             </div>
-            <div class="forecast-day forecast__3">
+            <div class="forecast__card">
                 <div class="forecast-image"></div>
-                <div class="forecast-temperature"></div>
+                <div class="forecast-temperature temperature"></div>
                 <div class="forecast-date"></div>
             </div>
-            <div class="forecast-day forecast__4">
+            <div class="forecast__card">
                 <div class="forecast-image"></div>
-                <div class="forecast-temperature"></div>
+                <div class="forecast-temperature temperature"></div>
                 <div class="forecast-date"></div>
             </div>
-            <div class="forecast-day forecast__5">
+            <div class="forecast__card">
                 <div class="forecast-image"></div>
-                <div class="forecast-temperature"></div>
+                <div class="forecast-temperature temperature"></div>
                 <div class="forecast-date"></div>
             </div>
-            <div class="forecast-day forecast__6">
+            <div class="forecast__card">
                 <div class="forecast-image"></div>
-                <div class="forecast-temperature"></div>
+                <div class="forecast-temperature temperature"></div>
                 <div class="forecast-date"></div>
             </div>
-            <div class="forecast-day forecast__7">
+            <div class="forecast__card">
                 <div class="forecast-image"></div>
-                <div class="forecast-temperature"></div>
+                <div class="forecast-temperature temperature"></div>
                 <div class="forecast-date"></div>
             </div>
         </div>
