Change 2 class names, add a placeholder

--- a/src/index.html
+++ b/src/index.html
@@ -15,14 +15,16 @@
             <div class="today__city"></div>
         </div>
         <div class="additional">
-            <div class="additional__its-now"></div>
+            <div class="additional__description"></div>
             <div class="additional__humidity"></div>
             <div class="additional__wind-speed"></div>
         </div>
         <div class="search">
-            <p>Search</p>
-            <input type="text" class="search__input">
-            <div class="toggle-temp"></div>
+            <div class="search__text">
+                <p>Search</p>
+            </div>
+            <input type="text" class="search__input" placeholder="London">
+            <div class="search__toggle"></div>
         </div>
         <div class="forecast">
             <div class="forecast__card">
